2010-11-16  Vladimir Serbinenko  <phcoder@gmail.com>

	Make legacy_source behave like source.

	* grub-core/commands/legacycfg.c (legacy_file): Don't call
	grub_show_menu.
	(grub_cmd_legacy_source): Call grub_show_menu if needed.

2010-11-16  Colin Watson  <cjwatson@debian.org>

	* conf/Makefile.common (CFLAGS_GNULIB): Add -Wno-unused-parameter.
	(-Wunused implies -Wunused-parameter, but not vice versa).

2010-11-16  Colin Watson  <cjwatson@ubuntu.com>

	* configure.ac: Make error messages less confusing by testing for
	-Wtrampolines rather than -Wno-trampolines (since -Wno-* is always
	accepted, but produces a diagnostic if something else is wrong).

2010-11-15  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/term/at_keyboard.c (grub_keyboard_controller_read)
	[GRUB_MACHINE_MIPS_YEELOONG || GRUB_MACHINE_QEMU]: ifdef-ed out
	(now unused).
	(grub_keyboard_controller_init)
	[GRUB_MACHINE_MIPS_YEELOONG || GRUB_MACHINE_QEMU]: Don't attempt to
	read the initial state since controller isn't inited yet.

2010-11-15  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/lib/relocator.c (malloc_in_range): Take into account that
	allocate_regbeg may need to create new chunk header.

2010-11-14  Vladimir Serbinenko  <phcoder@gmail.com>

	Fix quoting in legacy parser.

	* grub-core/lib/legacy_parse.c (grub_legacy_escape): Correctly handle
	single quotes.
	(grub_legacy_parse): Likewise.
	Reported by: Jordan Uggla.
	Tested by: Jordan Uggla.

2010-11-14  Vladimir Serbinenko  <phcoder@gmail.com>

	Don't add -lgcc on i386 and x86_64.

	* configure.ac (LIBS): Don't add -lgcc on i386 and x86_64.
	* conf/Makefile.common (LDADD_KERNEL): Likewise.
	* grub-core/Makefile.core.def (kernel): Use LDADD_KERNEL.

2010-11-14  Vladimir Serbinenko  <phcoder@gmail.com>

	* configure.ac: Add -Wno-trampolines when supported.

2010-11-14  Modestas Vainius <modax@debian.org>

	* grub-core/kern/emu/getroot.c (grub_util_is_dmraid): Recognise ddf1_
	fakeraid.
